--- a/Project.html
+++ b/Project.html
@@ -134,7 +134,7 @@
                 <div class="card mb-3 bg-dark text-white" style="height: 600px;border-radius: 0 0 100px 0;">
                     <div class="row no-gutters">
                       <div class="col-md-9">
-                        <img src="img/Data.png" class="card-img" alt="Date" height="600" >
+                        <img src="img/Data.png" class="card-img" alt="Date" height="100%" >
                       </div>
                       <div class="col-md-3">
                         <div class="card-body">
@@ -165,7 +165,7 @@
                         </div>
                       </div>
                       <div class="col-md-9">
-                        <img src="img/Programm.png" class="card-img" alt="Programm" height="600" >
+                        <img src="img/Programm.png" class="card-img" alt="Programm" height="100%" >
                       </div>
                     </div>
                   </div>
