--- a/Project.html
+++ b/Project.html
@@ -26,6 +26,8 @@
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
+        .my_font{
+          font-size:0.9em;
       }
     </style>
     <!-- Custom styles for this template -->
@@ -131,7 +133,7 @@
 
         <div class="row">
             <div class="col-12 col-lg-8 offset-lg-2">
-                <div class="card mb-3 bg-dark text-white" style="height: 600px;border-radius: 0 0 100px 0;">
+                <div class="card mb-3 bg-dark text-white" style="height:100%;border-radius: 0 0 100px 0;">
                     <div class="row no-gutters">
                       <div class="col-md-9">
                         <img src="img/Data.png" class="card-img" alt="Date" height="100%" >
@@ -139,7 +141,7 @@
                       <div class="col-md-3">
                         <div class="card-body">
                           <h3 class="card-title">Модельно-методический аппарат</h3>
-                          <p class="card-text" style="text-align: justify;font-size: 1.2em;">Модельно-методический аппарат представлен несколькими взаимосвязанными математическими моделями.
+                          <p class="card-text my_font" style="text-align: justify;font-size: 1.2em;">Модельно-методический аппарат представлен несколькими взаимосвязанными математическими моделями.
                                                  После выполнения расчётов происходит уточнение 
                                                     значения погрешности. При необходимости процесс зацикливается для увеличения точности результата.</p>
                           <p class="card-text"><small class="text-muted">The developer Plakhteev Dima</small></p>
@@ -152,7 +154,7 @@
 
         <div class="row" style="margin-top:50px ;">
             <div class="col-12 col-lg-8 offset-lg-2">
-                <div class="card mb-3 bg-dark text-white" style="height: 600px;border-radius: 0 0 100px 0;">
+                <div class="card mb-3 bg-dark text-white" style="height: 100%;border-radius: 0 0 100px 0;">
                     <div class="row no-gutters">
                       
                       <div class="col-md-3">
