--- a/Project.html
+++ b/Project.html
@@ -28,6 +28,9 @@
         }
         .my_font{
           font-size:0.9em;
+        }
+        .my_font2{
+          font-size:0.9em;
       }
     </style>
     <!-- Custom styles for this template -->
@@ -140,7 +143,7 @@
                       </div>
                       <div class="col-md-3">
                         <div class="card-body">
-                          <h3 class="card-title">Модельно-методический аппарат</h3>
+                          <h3 class="card-title my_font2">Модельно-методический аппарат</h3>
                           <p class="card-text my_font" style="text-align: justify;font-size: 1.2em;">Модельно-методический аппарат представлен несколькими взаимосвязанными математическими моделями.
                                                  После выполнения расчётов происходит уточнение 
                                                     значения погрешности. При необходимости процесс зацикливается для увеличения точности результата.</p>
@@ -159,7 +162,7 @@
                       
                       <div class="col-md-3">
                         <div class="card-body">
-                          <h3 class="card-title">Программная реализация</h3>
+                          <h3 class="card-title my_font2">Программная реализация</h3>
                           <p class="card-text" style="text-align: justify;font-size: 1.2em;">Программа для вычисления параметров самолёта реализована с использованием 
                                                                                                 языка программирования Python версии 3.7.3. Она состоит из 
                                                                                                 двух файлов: папки с базой данных и файла типа 'exe' .</p>
