--- a/Project.html
+++ b/Project.html
@@ -29,9 +29,11 @@
         .my_font{
           font-size:0.9em;
         }
-        .my_font2{
-          font-size:0.9em;
       }
+       @media (max-width: 1100px) {
+      .my_font2{
+          font-size:0.8em;
+        }
     </style>
     <!-- Custom styles for this template -->
     <link href="styles/cover.css" rel="stylesheet">
